trunk/Archive2/26/11b1ed81e62450/output
main.cpp:8:23: error: static_cast from 'int *' to 'Byte *' (aka 'unsigned char *') is not allowed
    Byte* byteArray = static_cast<Byte*>(&value);
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
